--- a/rlib1/project.json
+++ b/rlib1/project.json
@@ -4,17 +4,5 @@
   "sourceRoot": "rlib1/src",
   "projectType": "library",
   "tags": [],
-  "targets": {
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
-    },
-    "test": {
-      "executor": "@nx/vite:test",
-      "outputs": ["{options.reportsDirectory}"],
-      "options": {
-        "reportsDirectory": "../coverage/rlib1"
-      }
-    }
-  }
+  "targets": {}
 }
